[gd_scene load_steps=15 format=3 uid="uid://c6l8j45y0kxif"]

[ext_resource type="Script" uid="uid://0atx0823jbym" path="res://scripts/score_board.gd" id="1_ek31y"]
[ext_resource type="Texture2D" uid="uid://bx5ufvedb0jkb" path="res://assets/Jungle Asset Pack/parallax background/plx-1.png" id="2_dvfkj"]
[ext_resource type="Texture2D" uid="uid://gwvh0fh86mht" path="res://assets/Bananas/Banana.png" id="2_gjtyh"]
[ext_resource type="Texture2D" uid="uid://w8toireaeqm7" path="res://assets/Jungle Asset Pack/parallax background/plx-2.png" id="3_qlyxc"]
[ext_resource type="Texture2D" uid="uid://ch5272c3s0kku" path="res://assets/Jungle Asset Pack/parallax background/plx-3.png" id="4_fnf6i"]
[ext_resource type="Texture2D" uid="uid://70jl2k527r1p" path="res://assets/Jungle Asset Pack/parallax background/plx-4.png" id="5_dn7rr"]
[ext_resource type="Texture2D" uid="uid://bkumra8s4v8ou" path="res://assets/Jungle Asset Pack/parallax background/plx-5.png" id="6_ersyl"]
[ext_resource type="FontFile" uid="uid://ql8layomxqik" path="res://assets/Fonts/PixelOperator8-Bold.ttf" id="7_qlyxc"]

[sub_resource type="LabelSettings" id="LabelSettings_fnf6i"]
font_size = 24
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.776471)

[sub_resource type="LabelSettings" id="LabelSettings_dn7rr"]
font_size = 18
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.776471)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qlyxc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnf6i"]
bg_color = Color(0.633757, 0.633757, 0.633757, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dn7rr"]
bg_color = Color(0.259294, 0.259294, 0.259294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ersyl"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 10
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 5

[node name="ScoreBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ek31y")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dvfkj")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qlyxc")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fnf6i")

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_dn7rr")

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ersyl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.5
offset_top = -128.5
offset_right = 289.5
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 200

[node name="Level1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="text" type="Label" parent="VBoxContainer/HBoxContainer/Level1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Level 1:"
label_settings = SubResource("LabelSettings_fnf6i")

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer/Level1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Score: "
label_settings = SubResource("LabelSettings_fnf6i")

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer/Level1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Time:"
label_settings = SubResource("LabelSettings_fnf6i")

[node name="Level2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="text" type="Label" parent="VBoxContainer/HBoxContainer/Level2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Level 2:"
label_settings = SubResource("LabelSettings_fnf6i")

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer/Level2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Score:"
label_settings = SubResource("LabelSettings_fnf6i")

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer/Level2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Time:"
label_settings = SubResource("LabelSettings_fnf6i")

[node name="Gesamtscore" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Total Score:"
label_settings = SubResource("LabelSettings_fnf6i")

[node name="text" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("7_qlyxc")
text = "Your score amounts to the following
amount of bananas. Congratulations!"
label_settings = SubResource("LabelSettings_dn7rr")

[node name="Bananascore" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="VBoxContainer/Bananascore"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_gjtyh")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Bananascore"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_gjtyh")

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/Bananascore"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_gjtyh")

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/Bananascore"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_gjtyh")

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/Bananascore"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_gjtyh")

[node name="BackToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_qlyxc")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_qlyxc")
theme_override_styles/hover = SubResource("StyleBoxFlat_fnf6i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dn7rr")
theme_override_styles/normal = SubResource("StyleBoxFlat_ersyl")
text = "Back To Menu"

[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
